--- a/index.html
+++ b/index.html
@@ -1,29 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="author" content="claire_myers">
-    <meta name="description" content="reasearch">
-    <meta name="keywords" content="computer,research,communication">
-    <title>historyofcommunication</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="claire_myers">
+  <meta name="description" content="reasearch">
+  <meta name="keywords" content="computer,research,communication">
+  <title>historyofcommunication</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+</head>
 
-  <body>
-    <h1>The History of Communication Technologies</h1>
-      <h2>Telegraph</h2>
-        <p>The telegraph was a vital conduit for communication in the mid 1800’s.
-Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
-<a href="https://www.history.com/topics/inventions/telegraph "></a> 
-        </p>
-      <h2>Telephone</h2>
+<body>
+  <h1>The History of Communication Technologies</h1>
+  <h2>Telegraph</h2>
+  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
+    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
+    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
+    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+    This innovation led to the development of our modern telephones.
+    <a href="https://www.history.com/topics/inventions/telegraph"></a>
+  </p>
+  <h2>Telephone</h2>
+  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
+    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
+    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
+    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+    <a href="http://www.nationalitpa.com/history-of-telephone"></a>
+  </p>
+  <h2>Radio</h2>
+  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
+    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
+    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
+    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  </p>
+  <h2>Internet Messaging</h2>
+  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
+    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
+    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
+    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  </p>
+  <h2>Cell Phone</h2>
+  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
+    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
+    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
+    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  </p>
 
 
 
 
 
 
-  </body>
+
+
+</body>
 
 </html>
