--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <a href="https://www.history.com/topics/inventions/telegraph"></a>
   </p>
   <h2>Telephone</h2>
-  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
-    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
-    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
-    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
-    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
+  <p>After over thirty years of the telegraph holding the spot for the most prominent communication system in the United States, Alexander Graham Bell invented the first telephone. Bell and his partner Thomas Watson enlisted financial help from a
+    family member of Bell’s but led him to believe that they were developing a telegraph capable of transmitting multiple messages simultaneously. Bell’s telephone was very similar to the telegraph in its structure, the main difference being the
+    telephone interpreted a voice to electric current back to the sound of a voice instead of just dots and dashes to electric current to dots and ashes, as in a telegraph. Once their experiments began to indicate that different frequencies of sounds
+    produce electric currents of different strengths, Bell and Watson truly began to believe that inventing the telephone was possible. Finally, on March 10, 1876, Bell spoke to Watson over the phone successfully. Bell and Watson submitted their
+    patent for the telephone only hours before another inventor, Elisha Gray, possibly changing history. This innovation, like the telegraph, also led to the development of the modern telephone.
     <a href="http://www.nationalitpa.com/history-of-telephone"></a>
   </p>
   <h2>Radio</h2>
