--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
     <a href="http://www.nationalitpa.com/history-of-telephone"></a>
   </p>
   <h2>Radio</h2>
-  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
-    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
-    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
-    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
-    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
-    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  <p>The creation of the radio is the combination of many different discoveries and innovations of multiple scientists and inventors. The discovery of the radio wave as well as the previous technologies of the telegraph and telephone led to the
+    production of radios. The existence of radio waves was theorized by Scottish physicist James Clerk Maxwell in the 1860s. In 1866, Mahlon Loomis, an American dentist, demonstrated the process of “wireless telegraphy,” which was the first known
+    instance of wireless communication through the air. Twenty years later, German physicist Heinrich Rudolph Hertz proved that rapid changes in the strength of electrical current could be translated as radio waves. However, the first successful
+    radio transmission was sent by Italian inventor Guglielmo Marconi in 1895. Marconi also sent the first successful transcontinental radio message four years later. Nathan Stufflefield and Nikola Tesla also developed radio transmitters and applied
+    for patents. Ultimately, Tesla acquired the first patent of radio technology. These contributions and discoveries have led to the improved radio technology we use today.
+    <a href="https://www.thoughtco.com/invention-of-radio-1992382"></a>
   </p>
-  <h2>Internet Messaging</h2>
-  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
-    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
-    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
-    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
-    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
-    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  <h2>Internet</h2>
+  <p>Like many other inventions, the internet we use today has been evolving almost constantly since its conception. The first version of an internet network was vastly different than it is today. Designed for government use, ARPAnet aimed to let
+    government scientists share information over long distances. A node-to-node message was sent through ARPAnet from a lab computer at UCLA to one at Stanford in 1969, the first of its kind. However, the message “LOGIN” failed to send completely,
+    and the Stanford computer only received the first two letters of the message. Other networks started to be utilized, but it was difficult to combine them into the one entity “the internet.” Vinton Cerf wrote multiple protocols to connect multiple
+    networks. Computer programmer Tim Berners-Lee expanded on Cerf’s work and created the World Wide Web, which allowed anyone with internet access to view information, similar to today’s internet. The internet has even further evolved to become the
+    dynamic entity it is today, but without these innovations of the past, its existence wouldn’t be possible.
+    <a href="https://www.history.com/topics/inventions/invention-of-the-internet"></a>
   </p>
   <h2>Cell Phone</h2>
-  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
-    Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
-    the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
-    transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
-    across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
-    <a href="https://www.history.com/topics/inventions/telegraph "></a>
+  <p>TIn the mid 20th century, portable phones were an idea pulled straight from science fiction. Actually. The Star Trek series depicted characters communicating with small devices, contrasting the telephone systems utilized by most in that time.
+    This fictional idea became more feasible when Bell laboratories began designing a network for a cellular phone to connect to. An extensive network of hexagonal regions would span across the country, each containing a base station for cellular
+    connection. These base stations would transmit signals through radio waves, and neighboring stations would utilize different frequencies of the radio wave to inhibit interference. Dubbed the Advance Mobile Phone System, or AMPS, Bell
+    Laboratories’ system was produced on a small scale at the end on the 1970s. Motorola subsequently developed the first hand held mobile phone that could utilize this system. With its blocky structure and one kilogram weight, the DynaTAC produced
+    by Motorola in 1984 was vastly different than the small and sleek phones we have he privilege of using today, but this invention was a huge step that led to our connected world.
+    <a href="https://www.sciencemuseum.org.uk/objects-and-stories/invention-mobile-phones"></a>
   </p>
 
 
