--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="author" content="claire_myers">
   <meta name="description" content="reasearch">
   <meta name="keywords" content="computer,research,communication">
-  <title>historyofcommunication</title>
+  <title>historyofcommunicationtechnologies</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
