--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="keywords" content="computer,research,communication">
   <title>historyofcommunication</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>The History of Communication Technologies</h1>
+  <h1 id="title">The History of Communication Technologies</h1>
   <h2>Telegraph</h2>
   <p>The telegraph was a vital conduit for communication in the mid 1800’s.
     Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
