--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     This innovation led to the development of our modern telephones.
     <a href="https://www.history.com/topics/inventions/telegraph">Click here to learn more about the history of the telegraph</a>
   </p>
-  <h2>Telephone</h2>
+  <h2 class="headings">Telephone</h2>
   <p>After over thirty years of the telegraph holding the spot for the most prominent communication system in the United States, Alexander Graham Bell invented the first telephone. Bell and his partner Thomas Watson enlisted financial help from a
     family member of Bell’s but led him to believe that they were developing a telegraph capable of transmitting multiple messages simultaneously. Bell’s telephone was very similar to the telegraph in its structure, the main difference being the
     telephone interpreted a voice to electric current back to the sound of a voice instead of just dots and dashes to electric current to dots and ashes, as in a telegraph. Once their experiments began to indicate that different frequencies of sounds
@@ -30,7 +30,7 @@
     patent for the telephone only hours before another inventor, Elisha Gray, possibly changing history. This innovation, like the telegraph, also led to the development of the modern telephone.
     <a href="http://www.nationalitpa.com/history-of-telephone">Click here to learn more about the history of the telephone</a>
   </p>
-  <h2>Radio</h2>
+  <h2 class="headings">Radio</h2>
   <p>The creation of the radio is the combination of many different discoveries and innovations of multiple scientists and inventors. The discovery of the radio wave as well as the previous technologies of the telegraph and telephone led to the
     production of radios. The existence of radio waves was theorized by Scottish physicist James Clerk Maxwell in the 1860s. In 1866, Mahlon Loomis, an American dentist, demonstrated the process of “wireless telegraphy,” which was the first known
     instance of wireless communication through the air. Twenty years later, German physicist Heinrich Rudolph Hertz proved that rapid changes in the strength of electrical current could be translated as radio waves. However, the first successful
@@ -38,7 +38,7 @@
     for patents. Ultimately, Tesla acquired the first patent of radio technology. These contributions and discoveries have led to the improved radio technology we use today.
     <a href="https://www.thoughtco.com/invention-of-radio-1992382">Click here to learn more about the history of the radio</a>
   </p>
-  <h2>Internet</h2>
+  <h2 class="headings">Internet</h2>
   <p>Like many other inventions, the internet we use today has been evolving almost constantly since its conception. The first version of an internet network was vastly different than it is today. Designed for government use, ARPAnet aimed to let
     government scientists share information over long distances. A node-to-node message was sent through ARPAnet from a lab computer at UCLA to one at Stanford in 1969, the first of its kind. However, the message “LOGIN” failed to send completely,
     and the Stanford computer only received the first two letters of the message. Other networks started to be utilized, but it was difficult to combine them into the one entity “the internet.” Vinton Cerf wrote multiple protocols to connect multiple
@@ -46,7 +46,7 @@
     dynamic entity it is today, but without these innovations of the past, its existence wouldn’t be possible.
     <a href="https://www.history.com/topics/inventions/invention-of-the-internet">Click here to learn more about the history of the internet</a>
   </p>
-  <h2>Cell Phone</h2>
+  <h2 class="headings">Cell Phone</h2>
   <p>TIn the mid 20th century, portable phones were an idea pulled straight from science fiction. Actually. The Star Trek series depicted characters communicating with small devices, contrasting the telephone systems utilized by most in that time.
     This fictional idea became more feasible when Bell laboratories began designing a network for a cellular phone to connect to. An extensive network of hexagonal regions would span across the country, each containing a base station for cellular
     connection. These base stations would transmit signals through radio waves, and neighboring stations would utilize different frequencies of the radio wave to inhibit interference. Dubbed the Advance Mobile Phone System, or AMPS, Bell
