--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
     across America. Improvements to the telegraph including insulation and the ability to transmit multiple messages on a single line further assisted the sharing of information by the telegraph by allowing it to be shared faster and more accurately.
     This innovation led to the development of our modern telephones.
-    <a href="https://www.history.com/topics/inventions/telegraph">Click here to learn more about the history of the telegraph</a>
+    <a href="https://www.history.com/topics/inventions/telegraph">Click here to learn more about the history of the telegraph.</a>
+    <hr>
   </p>
   <h2 class="headings">Telephone</h2>
   <p>After over thirty years of the telegraph holding the spot for the most prominent communication system in the United States, Alexander Graham Bell invented the first telephone. Bell and his partner Thomas Watson enlisted financial help from a
@@ -28,7 +29,8 @@
     telephone interpreted a voice to electric current back to the sound of a voice instead of just dots and dashes to electric current to dots and ashes, as in a telegraph. Once their experiments began to indicate that different frequencies of sounds
     produce electric currents of different strengths, Bell and Watson truly began to believe that inventing the telephone was possible. Finally, on March 10, 1876, Bell spoke to Watson over the phone successfully. Bell and Watson submitted their
     patent for the telephone only hours before another inventor, Elisha Gray, possibly changing history. This innovation, like the telegraph, also led to the development of the modern telephone.
-    <a href="http://www.nationalitpa.com/history-of-telephone">Click here to learn more about the history of the telephone</a>
+    <a href="http://www.nationalitpa.com/history-of-telephone">Click here to learn more about the history of the telephone.</a>
+    <hr>
   </p>
   <h2 class="headings">Radio</h2>
   <p>The creation of the radio is the combination of many different discoveries and innovations of multiple scientists and inventors. The discovery of the radio wave as well as the previous technologies of the telegraph and telephone led to the
@@ -36,7 +38,8 @@
     instance of wireless communication through the air. Twenty years later, German physicist Heinrich Rudolph Hertz proved that rapid changes in the strength of electrical current could be translated as radio waves. However, the first successful
     radio transmission was sent by Italian inventor Guglielmo Marconi in 1895. Marconi also sent the first successful transcontinental radio message four years later. Nathan Stufflefield and Nikola Tesla also developed radio transmitters and applied
     for patents. Ultimately, Tesla acquired the first patent of radio technology. These contributions and discoveries have led to the improved radio technology we use today.
-    <a href="https://www.thoughtco.com/invention-of-radio-1992382">Click here to learn more about the history of the radio</a>
+    <a href="https://www.thoughtco.com/invention-of-radio-1992382">Click here to learn more about the history of the radio.</a>
+    <hr>
   </p>
   <h2 class="headings">Internet</h2>
   <p>Like many other inventions, the internet we use today has been evolving almost constantly since its conception. The first version of an internet network was vastly different than it is today. Designed for government use, ARPAnet aimed to let
@@ -44,7 +47,8 @@
     and the Stanford computer only received the first two letters of the message. Other networks started to be utilized, but it was difficult to combine them into the one entity “the internet.” Vinton Cerf wrote multiple protocols to connect multiple
     networks. Computer programmer Tim Berners-Lee expanded on Cerf’s work and created the World Wide Web, which allowed anyone with internet access to view information, similar to today’s internet. The internet has even further evolved to become the
     dynamic entity it is today, but without these innovations of the past, its existence wouldn’t be possible.
-    <a href="https://www.history.com/topics/inventions/invention-of-the-internet">Click here to learn more about the history of the internet</a>
+    <a href="https://www.history.com/topics/inventions/invention-of-the-internet">Click here to learn more about the history of the internet.</a>
+    <hr>
   </p>
   <h2 class="headings">Cell Phone</h2>
   <p>TIn the mid 20th century, portable phones were an idea pulled straight from science fiction. Actually. The Star Trek series depicted characters communicating with small devices, contrasting the telephone systems utilized by most in that time.
@@ -52,7 +56,8 @@
     connection. These base stations would transmit signals through radio waves, and neighboring stations would utilize different frequencies of the radio wave to inhibit interference. Dubbed the Advance Mobile Phone System, or AMPS, Bell
     Laboratories’ system was produced on a small scale at the end on the 1970s. Motorola subsequently developed the first hand held mobile phone that could utilize this system. With its blocky structure and one kilogram weight, the DynaTAC produced
     by Motorola in 1984 was vastly different than the small and sleek phones we have he privilege of using today, but this invention was a huge step that led to our connected world.
-    <a href="https://www.sciencemuseum.org.uk/objects-and-stories/invention-mobile-phones">Click here to learn more about the history of the cell phone</a>
+    <a href="https://www.sciencemuseum.org.uk/objects-and-stories/invention-mobile-phones">Click here to learn more about the history of the cell phone.</a>
+    <hr>
   </p>
 
 
