--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <h1 id="title">The History of Communication Technologies</h1>
   <h2 class="headings">Telegraph</h2>
-  <p>The telegraph was a vital conduit for communication in the mid 1800’s.
+  <p>   The telegraph was a vital conduit for communication in the mid 1800’s.
     Samuel Morse and his colleagues Leonard Gale and Alfred Vail developed the telegraph in the United States while Sir William Cooke and Sir Charles Wheatstone undertook a similar project in England, which was soon adapted for railroad signaling. In
     the United States, Morse and his associates developed a code famously known as “Morse code,” a series of dots and dashes that could be translated to English letters. Their telegraph required a simple electrical circuit for the code to be
     transmitted. One year after receiving funding for a telegraph system between Washington, D.C. and Baltimore, Maryland, Vail received from Morse this famous message: “What hath God wrought!” Soon after, telegraph systems began popping up all
@@ -24,7 +24,7 @@
     <hr>
   </p>
   <h2 class="headings">Telephone</h2>
-  <p>After over thirty years of the telegraph holding the spot for the most prominent communication system in the United States, Alexander Graham Bell invented the first telephone. Bell and his partner Thomas Watson enlisted financial help from a
+  <p>   After over thirty years of the telegraph holding the spot for the most prominent communication system in the United States, Alexander Graham Bell invented the first telephone. Bell and his partner Thomas Watson enlisted financial help from a
     family member of Bell’s but led him to believe that they were developing a telegraph capable of transmitting multiple messages simultaneously. Bell’s telephone was very similar to the telegraph in its structure, the main difference being the
     telephone interpreted a voice to electric current back to the sound of a voice instead of just dots and dashes to electric current to dots and ashes, as in a telegraph. Once their experiments began to indicate that different frequencies of sounds
     produce electric currents of different strengths, Bell and Watson truly began to believe that inventing the telephone was possible. Finally, on March 10, 1876, Bell spoke to Watson over the phone successfully. Bell and Watson submitted their
@@ -33,7 +33,7 @@
     <hr>
   </p>
   <h2 class="headings">Radio</h2>
-  <p>The creation of the radio is the combination of many different discoveries and innovations of multiple scientists and inventors. The discovery of the radio wave as well as the previous technologies of the telegraph and telephone led to the
+  <p>   The creation of the radio is the combination of many different discoveries and innovations of multiple scientists and inventors. The discovery of the radio wave as well as the previous technologies of the telegraph and telephone led to the
     production of radios. The existence of radio waves was theorized by Scottish physicist James Clerk Maxwell in the 1860s. In 1866, Mahlon Loomis, an American dentist, demonstrated the process of “wireless telegraphy,” which was the first known
     instance of wireless communication through the air. Twenty years later, German physicist Heinrich Rudolph Hertz proved that rapid changes in the strength of electrical current could be translated as radio waves. However, the first successful
     radio transmission was sent by Italian inventor Guglielmo Marconi in 1895. Marconi also sent the first successful transcontinental radio message four years later. Nathan Stufflefield and Nikola Tesla also developed radio transmitters and applied
@@ -42,7 +42,7 @@
     <hr>
   </p>
   <h2 class="headings">Internet</h2>
-  <p>Like many other inventions, the internet we use today has been evolving almost constantly since its conception. The first version of an internet network was vastly different than it is today. Designed for government use, ARPAnet aimed to let
+  <p>   Like many other inventions, the internet we use today has been evolving almost constantly since its conception. The first version of an internet network was vastly different than it is today. Designed for government use, ARPAnet aimed to let
     government scientists share information over long distances. A node-to-node message was sent through ARPAnet from a lab computer at UCLA to one at Stanford in 1969, the first of its kind. However, the message “LOGIN” failed to send completely,
     and the Stanford computer only received the first two letters of the message. Other networks started to be utilized, but it was difficult to combine them into the one entity “the internet.” Vinton Cerf wrote multiple protocols to connect multiple
     networks. Computer programmer Tim Berners-Lee expanded on Cerf’s work and created the World Wide Web, which allowed anyone with internet access to view information, similar to today’s internet. The internet has even further evolved to become the
@@ -51,7 +51,7 @@
     <hr>
   </p>
   <h2 class="headings">Cell Phone</h2>
-  <p>TIn the mid 20th century, portable phones were an idea pulled straight from science fiction. Actually. The Star Trek series depicted characters communicating with small devices, contrasting the telephone systems utilized by most in that time.
+  <p>   In the mid 20th century, portable phones were an idea pulled straight from science fiction. Actually. The Star Trek series depicted characters communicating with small devices, contrasting the telephone systems utilized by most in that time.
     This fictional idea became more feasible when Bell laboratories began designing a network for a cellular phone to connect to. An extensive network of hexagonal regions would span across the country, each containing a base station for cellular
     connection. These base stations would transmit signals through radio waves, and neighboring stations would utilize different frequencies of the radio wave to inhibit interference. Dubbed the Advance Mobile Phone System, or AMPS, Bell
     Laboratories’ system was produced on a small scale at the end on the 1970s. Motorola subsequently developed the first hand held mobile phone that could utilize this system. With its blocky structure and one kilogram weight, the DynaTAC produced
